tests/baselines/reference/newMissingIdentifier.errors.txt
newMissingIdentifier.ts(1,14): error TS1109: Expression expected.


==== newMissingIdentifier.ts (1 errors) ====
    var x = new ();
                 ~
!!! error TS1109: Expression expected.
    